# LabExtraSSDD

./: .gitignore  README.md  pyproject.toml
calculator/: calculator.py  command_handlers.py  consumer_servidor.py  producer_servidor.py  server.py
cliente_kafka/: consumer_cliente.py  producer_cliente.py
comunicador_kafka/: producer_servidor.py
config/: calculator.config
servidor_kafka/: consumer_servidor.py  producer_cliente.py  producer_servidor.py
servidor_kafka/RemoteCalculator/: __init__.py
